Make wiki edit button english and wide

--- a/templates/wiki/edit.html
+++ b/templates/wiki/edit.html
@@ -4,7 +4,7 @@
 
 
 
-{% block wiki_pagetitle %}{% trans "Edit" %}: {{ article.current_revision.title }}{% endblock %}
+{% block wiki_pagetitle %}Edit: {{ article.current_revision.title }}{% endblock %}
 
 
 {% block wiki_contents_tab %}
