--- a/templates/wiki/includes/breadcrumbs.html
+++ b/templates/wiki/includes/breadcrumbs.html
@@ -82,9 +82,9 @@
 
 {% if article|can_write:user and not article.current_revision.locked %}
 	<div class="pull-left" style="margin-left: 5px;">
-		 <a class="btn btn-info"  href="{% url 'wiki:edit' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px;">
+		 <a class="btn btn-info"  href="{% url 'wiki:edit' article_id=article.id path=urlpath.path %}" style="padding-bottom: 8px; padding-left: 15px; padding-right: 20px;">
 			 <span class="fa fa-edit"></span>
-			 <span class="hidden-xs">{% trans "Edit" %}</span>
+			 <span class="hidden-xs">Edit</span>
 		 </a>    
 	</div>
 {% else %}
