--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,6 @@
                             <li><a href="{% url "advent_calendar" "2016" %}">Julekalender 2016</a></li>
                           </ul>
                       </li>
-
                       
                       <li class="dropdown">
                           <a href="#om" class="dropdown-toggle" data-toggle="dropdown">
@@ -123,6 +122,7 @@
                                  <a href="{% url "committee_overview" %}" >
                                      Komitéer
                                  </a>
+                                 <li><a href="https://nabla.no/komite/styret/">Styret</a></li>
                              </li>
 
                              {# url for /nablashop/ #}
