--- a/templates/404.html
+++ b/templates/404.html
@@ -4,5 +4,6 @@
 <h1>404</h1>
 <p>
     Denne siden eksisterer dessverre ikke. Burde den vært her? Send en mail til webkom æt nabla dått ntnu dått no.
+    Hei igjen.
 </p>
 {% endblock %}
