--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -74,6 +74,8 @@
 </div>
 </div>
 
+Hei fra webkom, hurra.
+
 <div class="row">
 {% for news in news_list_3 %}
 {% include "includes/article_widget.html" %}
