Add automatically rescaling image to kommiteside description

--- a/com/templates/com/com_details.html
+++ b/com/templates/com/com_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load mediawiki_links %}
-{% load markdown_deux_tags %}
+{% load markdown %}
 {% load easy_thumbnails %}
 {% load sekizai_tags %}
 {% load static %}
