Fiks bug (feil variabelnavn) som hindrer informasjonsboksen i sidebaren til stillingsannonser fra aa laste inn.

--- a/jobs/templates/jobs/info_include.html
+++ b/jobs/templates/jobs/info_include.html
@@ -34,7 +34,7 @@
                 {% if job.company.website %}
                 <li><a href="{{ job.company.website }}">Nettside</a></li>
                 {% endif %}
-                <li><a href="{% url "company_detail" pk=job.company.id slug=job.company.name %}">Alle stillingsannonser</a></li>
+                <li><a href="{% url "company_detail" pk=job.company.id slug=job.company.slug %}">Alle stillingsannonser</a></li>
             </ul>
         </td>
     </tr>
