Remove import of url templatetag from future
because of removal in django 1.9

--- a/templates/wiki/base_site.html
+++ b/templates/wiki/base_site.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load sekizai_tags i18n wiki_tags %}{% load url from future %}
+{% load sekizai_tags i18n wiki_tags %}
     {% block wiki_body %}
 
     {% block wiki_navbar %}
