Remove use of dotted path in url reversal
https://docs.djangoproject.com/en/1.11/releases/1.10/#features-removed-in-1-10
The ability to reverse() URLs using a dotted Python path is removed.

--- a/poll/templates/poll/includes/vote_form.html
+++ b/poll/templates/poll/includes/vote_form.html
@@ -1,4 +1,4 @@
-<form action="{% url "poll.views.vote" poll.id %}" method="post">
+<form action="{% url "poll_vote" poll.id %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="next" value="{% firstof next request.path %}">
     {% for choice in poll.choices.all %}
