Stop using sekizai inside like-templatetag
Something has changed in newer versions of sekizai and django
so that the way the javascript for the like buttons was included
didn't work anymore.

Changed to adding the javascript manually for each template
that the templatetag is used.

--- a/interactive/templates/interactive/advent_door_base_2016.html
+++ b/interactive/templates/interactive/advent_door_base_2016.html
@@ -1,10 +1,14 @@
 {% extends "interactive/advent_base_2016.html" %}
 {% load markdown %}
 {% load like %}
+{% load sekizai_tags %}
 
 {% block title %}{{ door.number }}{% endblock %}
 
 {% block content %}
+{% addtoblock "js" %}
+{% include "likes/like_js_config.html" %}
+{% endaddtoblock %}
 
 <h1>{{ door.number }}</h1>
 {% if not door.is_published %}
