--- a/podcast/templates/podcast/podcast_detail.html
+++ b/podcast/templates/podcast/podcast_detail.html
@@ -13,6 +13,10 @@
     <link href="{% static "podcast/podcast.css" %}" rel="stylesheet"/>
 {% endaddtoblock %}
 
+{% addtoblock "js" %}
+{% include "likes/like_js_config.html" %}
+{% endaddtoblock %}
+
 <div class="tittel">
   <h2>{{ podcast.title }}</h2>
   {% if podcast.image %}
