Events is now an djangoapp

--- a/contentapps/events/templates/events/event_detail.html
+++ b/contentapps/events/templates/events/event_detail.html
@@ -38,8 +38,8 @@
 
 {% block sidebar %}
 
-{% include "content/events/includes/info.html" with event=event %}
+{% include "events/includes/info.html" with event=event %}
 {% include "content/includes/meta.html" with content=event %}
-{% include "content/events/includes/sidebar-admin.html" %}
+{% include "events/includes/sidebar-admin.html" %}
 
 {% endblock %}
