--- a/templates/flatpages/emptysidebar.html
+++ b/templates/flatpages/emptysidebar.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load mediawiki_links %}
 {% load markdown_deux_tags %}
 {% load flatpages %}
 
@@ -9,5 +8,5 @@
 
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
-    {{ flatpage.content|markdown:"unsafe"|wikilinks}}
+    {{ flatpage.content|markdown:"unsa}}
 {% endblock %}
