Fix some problems in the production database

--- a/nablapps/jobs/templates/jobs/jobs_detail.html
+++ b/nablapps/jobs/templates/jobs/jobs_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% include "news/includes/text_content.html" with news=job%}
+{% include "includes/text_content.html" with news=job%}
 {% include "content/includes/comments.html" with content=job %}
 
 {% endblock %}
