--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -5,18 +5,20 @@
 
 <ul class="nav">
 {% for event in upcoming %}
-    <li>
-        <a href="{{ event.get_absolute_url }}">
-            <time class="label {{ class }}"
-                  datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"j.m" }}</time>
-            {{ event.headline }}
-            {% if event.registration_required %}
-                <span title="Ledige plasser / Totalt antall plasser">
-                    {{ event.users_attending }}/{{ event.places }}
-                </span>
-            {% endif %}
-        </a>
-    </li>
+    {% if event.published %}
+        <li>
+            <a href="{{ event.get_absolute_url }}">
+                <time class="label {{ class }}"
+                      datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"j.m" }}</time>
+                {{ event.headline }}
+                {% if event.registration_required %}
+                    <span title="Ledige plasser / Totalt antall plasser">
+                        {{ event.users_attending }}/{{ event.places }}
+                    </span>
+                {% endif %}
+            </a>
+        </li>
+    {% endif %}
 {% empty %}
     <li>Ingen arrangementer</li>
 {% endfor %}
