--- a/nablapps/podcast/templates/podcast/podcast_detail.html
+++ b/nablapps/podcast/templates/podcast/podcast_detail.html
@@ -23,7 +23,7 @@
   <img class="img-responsive" src="{{ podcast.image.url }}" alt="{{ podcast.title }}" style="max-width: 100%;"/>
   {% endif %}
   <p>
-  <i>Dato: {{ podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {{ podcast.view_counter }}</i>
+  <i>Dato: {{ podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {{ hitcount.total_hits }}</i>
   {% show_like_button_for podcast %}
   </p>
 </div>
