--- a/content/templates/content/includes/album_sidebar_admin.html
+++ b/content/templates/content/includes/album_sidebar_admin.html
@@ -3,7 +3,7 @@
 {% block sidebar-admin %}
 
     <li>
-        <a href="{% url "admin:content_album_change" album.id %}">
+        <a href="{% url "admin:album_album_change" album.id %}">
         <span class="glyphicon glyphicon-cog"></span>
         Endre album
         </a>
