--- a/nablapps/interactive/static/interactive/css/advent_calendar_2016.css
+++ b/nablapps/interactive/static/interactive/css/advent_calendar_2016.css
@@ -2,41 +2,8 @@
     width: 100%;
 }
 
-/* prøvde å bruke disse fordi Script MT er proprietary,
-   men positioning blir ødelagt når man åpner luker
-
-@font-face {
-    font-family: 'kaushan_scriptregular';
-    src: url('../fonts/kaushanscript-regular-webfont.woff2') format('woff2'),
-         url('../fonts/kaushanscript-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'lobster_1.3regular';
-    src: url('../fonts/lobster_1.3-webfont.woff2') format('woff2'),
-         url('../fonts/lobster_1.3-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-*/
-
-@font-face {
-    font-family: 'Kaushanscript';
-    src:url("../fonts/KaushanScript-Regular.eot") format("eot"),
-        url("../fonts/KaushanScript-Regular.woff") format("woff"),
-	url("../fonts/KaushanScript-Regular.ttf") format("truetype"),
-	url("../fonts/KaushanScript-Regular.svg#KaushanScript-Regular") format("svg");
-    font-weight:normal;
-    font-style:normal;
-}
-
 h1 {
-    font-family: 'Script MT', 'Kaushanscript',  Arial, sans-serif;
+    font-family: 'Script MT',  Arial, sans-serif;
     color: rgb(154,16,39);
     font-size: 60px;
     text-align: center;
@@ -88,7 +55,7 @@ h1 {
     z-index: 30;
     display: block;
     position: relative;
-    font-family: 'Script MT', 'Kaushanscript', Arial, sans-serif;
+    font-family: 'Script MT', Arial, sans-serif;
     color: rgb(154,16,39);
     cursor: pointer;
 }
