--- a/nablapps/interactive/templates/interactive/embed.html
+++ b/nablapps/interactive/templates/interactive/embed.html
@@ -14,6 +14,12 @@
 <html>
 #Styrets jul
 
+<div class="text">
+    {% show_like_button_for door %}
+    <p>
+    {{ door.content|markdown:"unsafe" }}
+    </p>
+
 <style>
 .YTplayer {
     background-position: center;
@@ -220,12 +226,47 @@ function jsonConcat(defaultPlayerParameters, individualPlayerParameters, hardcod
 
 <body>
 
-<div class="YTplayer" id="your_youtube_video_1_id" data-params="controls=1,rel=1" style="width:640px;height:360px;"></div>
-
-<div class="YTplayer" id="your_youtube_video_2_id" data-params="showinfo=0,modestbranding=0" style="width:640px;height:360px;"></div>
-
-<div class="YTplayer" id="your_youtube_video_n_id" data-params="rel=0" style="width:640px;height:360px;"></div>
+<div class="YTplayer" id="uXjfLVPBwlE?autoplay=1&start=5" data-params="showinfo=0, rel=0" style="width:640px;height:360px;"></div>
 
 </body>
+
+       {% if door.quiz %}
+    <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til quiz!</a></p>
+    {% endif %}
+    {% if door.user_test %}
+    <p><a href="{{ door.user_test.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til brukertest!</a></p>
+    {% endif %}
+    {% if door.is_lottery %}
+    {% if door.winner %}
+        <h1>Gratulerer med seieren!</h1>
+        {% include "accounts/includes/user_large.html" with user=door.winner %}
+    {% else %}
+        <form action="{% url "advent_participate" door.calendar.year door.number %}" method="post">
+            {% csrf_token %}
+            {% if door.is_text_response %}
+            <div class="form-group">
+                {% if part %}
+                <label>Endre svar:</label>
+                <textarea class="form-control" name="text" rows="3">{{ part.text }}</textarea>
+                {% else %}
+                <label>Ditt svar:</label>
+                <textarea class="form-control" name="text" rows="3"></textarea>
+                {% endif %}
+            </div>
+            {% endif %}
+            <button type="submit" class="btn btn-large btn-primary">
+                Delta i trekningen
+            </button>
+        </form>
+    {% endif %}
+        <h2>Med i trekningen:</h2>
+        <div>
+            {% for part in door.participation.all %}
+            {% include "accounts/includes/user_small.html" with user=part.user %}
+            {% endfor %}
+        </div>
+
+    {% endif %}
+</div>
 </html>
 {% endblock %}
