Removes depricated 'flere nyheter' link

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -125,7 +125,7 @@
         {% include "includes/article_widget.html" %}
     {% endfor %}
 </div>
-<a href="{% url "news_list" %}" class="btn">Flere nyheter</a>
+{# <a href="{% url "news_list" %}" class="btn">Flere nyheter</a> #}
 {% endblock content %}
 
 {% block sidebar %}
