--- a/nablapps/accounts/templates/accounts/user_registration.html
+++ b/nablapps/accounts/templates/accounts/user_registration.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<p>Her kan du registrere deg med ditt NTNU-brukernavn. Hvis brukernavnet er godkjent vil du motta en epost med passord.</p>
+<p>Her kan du registrere deg med ditt NTNU-brukernavn. Det er kun nablakomponenter som kan lage seg bruker. Hvis du har skiftet linje må du betale medlemskontigent og sende mail til websjef@nabla.ntnu.no Hvis brukernavnet er godkjent vil du motta en epost med passord.</p>
 
 <form method="post" action="" >
     {% csrf_token %}
